--- a/pages/carts.html
+++ b/pages/carts.html
@@ -6,15 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=hea, initial-scale=1.0">
     <link rel="stylesheet" href="../pages_css/home.css">
-    <link rel="stylesheet" href="../pages_css/product.css">
+    <link rel="stylesheet" href="../pages_css/carts.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
     <link rel="stylesheet" href="../pages_css/font-awesome.css">
     <link rel="stylesheet" href="../pages_css/detailproduct.css">
     <link rel="stylesheet " href="../bootstrap/bootstap_min.css ">
-    <title>Document</title>
+    <title>Chi tiết sản phẩm</title>
 </head>
 
 <body>
+    <!-- Logo và thanh menu cũ -->
     <header>
         <!-- <div class="logo ">
             <h1>MEGA STORE</h1>
@@ -89,7 +90,7 @@
         </nav>
         <!--  -->
     </header>
-    <!--  -->
+    <!-- Thông tin sản phẩm -->
     <main>
         <div class="product">
             <div class="super_container">
@@ -178,6 +179,8 @@
         </div>
         </div>
         </div>
+
+
         <!-- Combo san pham -->
         <div class="row row-underline">
             <div class="col-md-6"> <span class=" deal-text">Các sản phẩm đi kèm</span> </div>
@@ -215,6 +218,7 @@
                 </div>
             </div>
         </div>
+
 
         <!-- Chi tiết sản phẩm -->
         <div class="row row-underline">
@@ -284,6 +288,8 @@
         </div>
         </div>
         </div>
+
+
         <!-- shipment -->
         <div class="vanchuyen ">
             <!--van-chuyen-->
